# roboroad

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  setup_devices.sh
URDF/####UR3e_Master_Device/: CMakeLists.txt  package.xml
URDF/####UR3e_Master_Device/launch/: display.launch  gazebo.launch
URDF/####UR3e_Master_Device/meshes/: L1.STL  L2.STL  L3.STL  L4.STL  L5.STL  L6.STL
URDF/####UR3e_Master_Device/urdf/: ####UR3e_Master_Device.csv  ####UR3e_Master_Device.urdf
URDF/UR3e_Master_Device/: CMakeLists.txt  package.xml
URDF/UR3e_Master_Device/launch/: display.launch  gazebo.launch
URDF/UR3e_Master_Device/meshes/: L1.STL  L2.STL  L3.STL  L4.STL  L5.STL
URDF/UR3e_Master_Device/urdf/: UR3e_Master_Device.csv  UR3e_Master_Device.urdf
config/: README.md  config.yaml
src/: main.cpp
src/common/: common.h  diag.h
src/gravity_compensation/: gravity_compensation.cpp  gravity_compensation.h
src/hal/button/: button_server.cpp  button_server.h
src/hal/dynamixel/: dynamixel_hal.cpp  dynamixel_hal.h
src/hal/mouse/: mouse_handler.cpp  mouse_handler.h
src/hal/ur/: ur_hal.cpp  ur_hal.h
src/hal/vision/: vision.cpp  vision.h  vision_manager.cpp  vision_manager.h
src/recorder/: recorder.cpp  recorder.h
src/rt/: rt_task.cpp  rt_task.h
src/save/: log_manager.cpp  log_manager.h  save_manager.cpp  save_manager.h
src/teleop/: teleop.cpp  teleop.h
test/: CMakeLists.txt  rtde_client.cpp
test2/: CMakeLists.txt  main.cpp
utile/: check_image_gap.py  check_q_data.py  compare_hdf5.py  graph.py  read_data.py  show_images.py  test_cam.py  validate_dataset.py  visualize_hdf5.py
